No projeto Angular foram feitas modificações no CRUD VENDAS, PRODUTOS E FORNECEDOR

--- a/src/app/components/template/footer/footer.component.html
+++ b/src/app/components/template/footer/footer.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar class= "footer">
     <span>
-        Desenvolvido com
+        Desenvolvido
         <i class= "material-icons red v-middle">
-            favorite
+            
         </i>
         por <strong>Artur</strong>
     </span>
