--- a/src/app/components/template/nav/nav.component.html
+++ b/src/app/components/template/nav/nav.component.html
@@ -39,7 +39,7 @@
             </i>
             PRODUTOS
         </a>
-        <a mat-list-item routerLink="/venda">
+        <a mat-list-item routerLink="/vendas">
             <i class= "material-icons">
             </i>
             VENDAS
@@ -48,6 +48,6 @@
     </mat-sidenav>
     <mat-sidenav-content class="content">
         <router-outlet></router-outlet>
-        <app-messages></app-messages>
+       <!-- <app-messages></app-messages>-->
     </mat-sidenav-content>
 </mat-sidenav-container>>
