--- a/src/app/fornecedor/fornecedor-update/fornecedor-update.component.html
+++ b/src/app/fornecedor/fornecedor-update/fornecedor-update.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <mat-card-title>Alterar Categoria</mat-card-title>
+    <mat-card-title>ALTERAR FORNECEDOR</mat-card-title>
     <form>
         <mat-form-field>
             <input matInput placeholder="Nome" 
