--- a/src/app/fornecedor/fornecedor-listar/fornecedor-listar.component.html
+++ b/src/app/fornecedor/fornecedor-listar/fornecedor-listar.component.html
@@ -23,7 +23,7 @@
             <td>{{fornecedor.cnpj}}</td>
             <td>{{fornecedor.email}}</td>
 
-            <td><button mat-cell (click)="updateFornecedor()" color="warn" class="btn btn-danger" style="margin-left: 10px">
+            <td><button mat-cell routerLink="/fornecedor/update/alterar/{{fornecedor.id}}" color="warn" class="btn btn-danger" style="margin-left: 10px">
                 <i class= "material-icons edit">
                     edit
                 </i></button>
