Criação da Lista de Artistas "Ok" e Cadastro de Artista "A concluir upload de imagens"

--- a/src/app/components/template/nav/nav.component.html
+++ b/src/app/components/template/nav/nav.component.html
@@ -2,7 +2,7 @@
     <mat-sidenav class="sidenav" mode="side" opened
         fixedInViewport= "true" fixedTopGap="64">
         <mat-nav-list class="nav-list">
-        <a mat-list-item>
+        <a>
             <i class= "material-icons">
             </i>
             MENU
@@ -13,7 +13,7 @@
             </i>
             MUSICAS
         </a>
-        <a mat-list-item routerLink="">
+        <a mat-list-item routerLink="artists">
             <i class= "material-icons">
             </i>
             ARTISTAS
@@ -23,10 +23,10 @@
             </i>
             GÊNEROS
         </a>
-        <a mat-list-item routerLink="/configuration">
+        <a mat-list-item routerLink="/user">
             <i class= "material-icons">
             </i>
-            CONFIGURAÇÕES
+            USUÁRIOS
         </a>
 
         <span>
