--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,15 +1,25 @@
-<h2>USUÁRIO</h2>
-
+<div class="container">
+    <div class="elemento">
 <button mat-raised-button (click)="navigateToUserCreate()">
-    NOVO USUÁRIO
+    CADASTRAR
 </button>
+    </div>
+</div>
+
+<app-user-listar></app-user-listar>
+
+<!--
+<app-user-read2></app-user-read2>
+-->
 
 <!--
 <button mat-raised-button (click)="navigateToUserSearch()">
     PROCURAR
 </button>
--->
 
 <button mat-raised-button (click)="navigateToUserListar()">
     LISTA DE USUÁRIOS
 </button>
+
+-->
+
