--- a/src/app/user/user-listar/user-listar.component.html
+++ b/src/app/user/user-listar/user-listar.component.html
@@ -1,7 +1,8 @@
 <div class="panel panel-primary">
     <div class="panel-heading">
       <h2>LISTA DE USUÁRIOS</h2>
-    </div>
+</div>
+<!--
     <div class="panel-body">
       <table class="table table-striped">
         <thead>
@@ -37,3 +38,41 @@
     </div>
     
   </div>
+-->
+
+  <div class="mat-elevation-z4">
+    <table mat-table [dataSource]='users'>
+      <!-- Id Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef >Id</th>
+        <td mat-cell *matCellDef="let row">{{row.id}}</td>
+      </ng-container>
+  
+      <!-- Name Column -->
+      <ng-container matColumnDef="nome">
+        <th mat-header-cell *matHeaderCellDef >Nome</th>
+        <td mat-cell *matCellDef="let row">{{row.nome}}</td>
+      </ng-container>
+
+            <!-- Ações Column -->
+            <ng-container matColumnDef="action">
+              <th mat-header-cell *matHeaderCellDef >Ações</th>
+              <td mat-cell *matCellDef="let user">
+                  <button mat-raised-button class="edit" routerLink="/user/update/alterar/{{user.id}}">
+                    <i class= "edit">
+                      Editar
+                    </i>
+                  </button>
+                  <button mat-raised-button class= "delete" (click)="delete(user)">
+                    <i class= "delete">
+                      Excluir
+                    </i>
+                  </button>
+              </td>
+            </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table> 
+  </div>
+  
