--- a/src/app/artists/artist-create/artist-create.component.html
+++ b/src/app/artists/artist-create/artist-create.component.html
@@ -11,7 +11,9 @@
             [(ngModel)] = "artists.artist_genre" name="artist_genre">
         </mat-form-field>
         
+
         <div>
+            <mat-card-title class = 'fonte'>CARREGAR IMAGEM</mat-card-title>
           <input type="file" (change) = "inputFileChange($event)"/>
         </div>
 
